@startuml

interface RenderInterface {
  {abstract} reRenderView()
}
interface ColumnManagerInterface {
  {abstract} createBodyColumns(entity: T): ColumnBodyEntityInterface[]
  {abstract} getHeadColumns(): ColumnHeadEntityInterface[]
}
interface SortInterface <T> {
  {abstract} getSortedEntities (entities: T[]): T[]
  {abstract} by(field)
}
class Sort {
    table: RenderInterface
    entities
    handleChange()
}
SortInterface <|.. Sort

ColumnManagerInterface <-- SortInterface
note left on link
columnManager.getHeadColumns()
end note
RenderInterface <-o  Sort
note left on link
handleChange(entity) {
  // ... code ...
  table.reRenderView()
}
end note

Sort <-  CLIENT
note left on link
sort.by("name")
end note
Sort o-- "0 .. *" Entity
@enduml
